@@ -1,6 +1,6 @@
 # -*- mode: makefile; coding: utf-8 -*-
-# Copyright © 2003 Colin Walters <walters@debian.org> and Jonas
-# Smedegaard <dr@jones.dk>
+# Copyright © 2003 Colin Walters <walters@debian.org>
+# Copyright © 2003 Jonas Smedegaard <dr@jones.dk>
 # Description: Defines useful variables for Perl modules
 #
 # This program is free software; you can redistribute it and/or
