@@ -2,7 +2,6 @@
 # Copyright © 2003 Colin Walters <walters@debian.org>
 # Copyright © 2006 Marc Dequènes (Duck) <Duck@DuckCorp.org>
 # Copyright © 2003,2006-2009 Jonas Smedegaard <dr@jones.dk>
-#
 # Description: manage Python modules using the 'distutils' build system
 #
 # This program is free software; you can redistribute it and/or
