@@ -1,7 +1,6 @@
 # -*- mode: makefile; coding: utf-8 -*-
 # Copyright © 2002,2003 Colin Walters <walters@debian.org>
-#              2004 David B Harris <dbharris@eelf.ddts.net
-#
+# Copyright © 2004 David B Harris <dbharris@eelf.ddts.net>
 # Description: A CDBS frontend to the dpatch patch system
 #
 # This program is free software; you can redistribute it and/or
