@@ -1,7 +1,6 @@
 # -*- mode: makefile; coding: utf-8 -*-
 # Copyright © 2002,2003 Colin Walters <walters@debian.org>
 # Description: A sample patch system which uses separate files in debian/patches
-#  Patch suffix is specified by DEB_PATCH_SUFFIX. Defaults to .patch.
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License as
@@ -17,6 +16,10 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
 # 02111-1307 USA.
+
+####
+# Patch suffix is specified by DEB_PATCH_SUFFIX. Defaults to .patch.
+####
 
 #PATH_RULES#
 
